--- a/src/main/resources/templates/bookDetail.html
+++ b/src/main/resources/templates/bookDetail.html
@@ -26,7 +26,7 @@
         <div class="row" style="margin-top: 120px;">
             <div class="col-xs-3">
                 <a th:href="@{/bookshelf}">Back to book list</a><br/>
-                <img class="img-responsive shelf-book" th:src="#{adminPath}+@{/image/book/}+${book.id}+'.png'"/>
+                <img th:src="${book.imageUrl}" class="img-responsive center-block" />
             </div>
             <br/><br/><br/><br/>
             <div class="col-xs-9">
